--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
+# Python cache
 __pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Spark / Hadoop / temp files
 *.csv
 *.parquet
 *.log
+/tmp/
+
+# OS / IDE
 .DS_Store
+.idea/
+.vscode/
